Add binary renaming instructions to release documentation
- Add 'After Download - Rename Binary' section to release pages
- Include platform-specific rename commands (mv for Unix, ren for Windows)
- Add chmod +x instructions for Linux/macOS executability
- Update both release.yml and draft-release.yml workflows
- Update README.md with versioned binary naming and rename instructions
- Update verification examples to use renamed binary

This ensures users can maintain consistent 'gsecutil' command usage
after downloading versioned binaries, making upgrades seamless.

--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -171,6 +171,18 @@ jobs:
           echo "| macOS | Apple Silicon | [gsecutil-darwin-arm64-v$VERSION](https://github.com/${{ github.repository }}/releases/download/v$VERSION/gsecutil-darwin-arm64-v$VERSION) |"
           echo "| Windows | x64 | [gsecutil-windows-amd64-v$VERSION.exe](https://github.com/${{ github.repository }}/releases/download/v$VERSION/gsecutil-windows-amd64-v$VERSION.exe) |"
           echo ""
+          echo "#### After Download - Rename Binary"
+          echo ""
+          echo "**Important:** Rename the downloaded binary to \`gsecutil\` (or \`gsecutil.exe\` on Windows):"
+          echo ""
+          echo "\`\`\`bash"
+          echo "# Linux/macOS example:"
+          echo "mv gsecutil-linux-amd64-v$VERSION gsecutil && chmod +x gsecutil"
+          echo ""
+          echo "# Windows example:"
+          echo "ren gsecutil-windows-amd64-v$VERSION.exe gsecutil.exe"
+          echo "\`\`\`"
+          echo ""
           echo "### Testing Checklist"
           echo ""
           echo "Before publishing this release, please verify:"
