--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,6 +91,21 @@ jobs:
           echo "| macOS | Apple Silicon | [gsecutil-darwin-arm64-v${{ steps.get_version.outputs.version }}](https://github.com/${{ github.repository }}/releases/download/v${{ steps.get_version.outputs.version }}/gsecutil-darwin-arm64-v${{ steps.get_version.outputs.version }}) |"
           echo "| Windows | x64 | [gsecutil-windows-amd64-v${{ steps.get_version.outputs.version }}.exe](https://github.com/${{ github.repository }}/releases/download/v${{ steps.get_version.outputs.version }}/gsecutil-windows-amd64-v${{ steps.get_version.outputs.version }}.exe) |"
           echo ""
+          echo "#### After Download - Rename Binary"
+          echo ""
+          echo "**Important:** Rename the downloaded binary to \`gsecutil\` (or \`gsecutil.exe\` on Windows) for consistent command usage:"
+          echo ""
+          echo "\`\`\`bash"
+          echo "# Linux/macOS example:"
+          echo "mv gsecutil-linux-amd64-v${{ steps.get_version.outputs.version }} gsecutil"
+          echo "chmod +x gsecutil"
+          echo ""
+          echo "# Windows example (in PowerShell or Command Prompt):"
+          echo "ren gsecutil-windows-amd64-v${{ steps.get_version.outputs.version }}.exe gsecutil.exe"
+          echo "\`\`\`"
+          echo ""
+          echo "This allows you to use the same \`gsecutil\` command regardless of version."
+          echo ""
           echo "### Install with Go"
           echo ""
           echo "\`\`\`bash"
@@ -100,8 +115,12 @@ jobs:
           echo "### Verify Installation"
           echo ""
           echo "\`\`\`bash"
-          echo "./gsecutil-linux-amd64-v${{ steps.get_version.outputs.version }} --version  # Linux example"
-          echo "gsecutil --version                                                         # If installed with Go"
+          echo "# After renaming the binary:"
+          echo "./gsecutil --version      # Linux/macOS"
+          echo "gsecutil.exe --version    # Windows"
+          echo ""
+          echo "# If installed with Go:"
+          echo "gsecutil --version"
           echo "\`\`\`"
           echo ""
           echo "## Requirements"
